06-eks-istio-argocd-starbucks/networkpolicies/allow-istio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-ingress
  namespace: prod
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          istio: ingress
    - podSelector:
        matchLabels:
          istio: ingressgateway
  egress:
  - to:
    - namespaceSelector: {}
